# proje-dev

./: .coverage  .env  .env.example  .gitignore  Dockerfile  README.md  ROADMAP.md  conftest.py  docker-compose.yml  pyproject.toml  setup_and_test.ps1
core_engine/: Cargo.toml
core_engine/src/: main.rs  web_server.rs
core_engine/src/http_header_analyzer/: analyzer.rs  mod.rs  printer.rs
docs/modules/: core_and_orchestrator.md  core_engine.md  orchestrator.md  orchestrator_module.md
docs/references/: references_list.md  resources.md
docs/research/: network_performance_analysis.md  research_notes.md
orchestrator/app/: config.py  main.py  scanner.py  utils.py
reports/: isu_secops_192-168-1-1_20260605_184248.md  isu_secops_192-168-1-1_20260605_184258.md  isu_secops_192-168-1-1_20260605_184618.md  isu_secops_192-168-1-1_20260605_184628.md  isu_secops_scanme-nmap-org_20260605_173613.md
src/core_engine/src/: lib.rs  web_server.rs
src/core_engine/src/http_header_analyzer/: scorer.rs  tls_checker.rs
src/orchestrator/: requirements.txt
src/orchestrator/app/: main.py  reporter.py  scanner.py  utils.py
src/static/: index.html
src/tests/: __init__.py  test_orchestrator.py
tests/: test_orchestrator.py
